src/test/ui/feature-gates/feature-gate-static-nobundle.stderr
error[E0658]: #[link(kind="static-nobundle")] is feature gated (see issue #37403)
  --> $DIR/feature-gate-static-nobundle.rs:1:1
   |
LL | #[link(name="foo", kind="static-nobundle")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(static_nobundle)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
