src/test/ui/feature-gates/feature-gate-static-nobundle.rs
#[link(name="foo", kind="static-nobundle")]
//~^ ERROR: #[link(kind="static-nobundle")] is feature gated
extern {}

fn main() {}
